tests/dataset/tpc-ds/compiler/erlang/q26.error
run: exit status 127
escript: exception error: bad key: cs_quantity
  in function  map_get/2
     called as map_get(cs_quantity,
                       #{cd =>
                             #{cd_demo_sk => 1,cd_gender => "M",
                               cd_marital_status => "S",
                               cd_education_status => "College"},
                         i => #{i_item_sk => 1,i_item_id => "ITEM1"},
                         p =>
                             #{p_promo_sk => 1,p_channel_email => "N",
                               p_channel_event => "Y"},
                         cs =>
                             #{cs_sold_date_sk => 1,cs_item_sk => 1,
                               cs_bill_cdemo_sk => 1,cs_promo_sk => 1,
                               cs_quantity => 10,cs_list_price => 100,
                               cs_coupon_amt => 5,cs_sales_price => 95},
                         d => #{d_date_sk => 1,d_year => 2000}})
     *** argument 1: not present in map
  in call from q26_erl__escript__1752__555504__661303__8963:'-main/1-lc$^8/1-1-'/1 (/tmp/q26.erl, line 11)
  in call from q26_erl__escript__1752__555504__661303__8963:'-main/1-lc$^6/1-0-'/1 (/tmp/q26.erl, line 11)
  in call from q26_erl__escript__1752__555504__661303__8963:main/1 (/tmp/q26.erl, line 11)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
